--- a/Croatian/main/MiuiSystemUIPlugin.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiSystemUIPlugin.apk/res/values-hr/strings.xml
@@ -399,6 +399,31 @@ Korisnici slušalica koje nisu Xiaomi: poništite svoje slušalice u Bluetooth p
   <string name="qs_customize_header_sub_title">Povucite dodane prečace da biste ih prerasporedili</string>
   <string name="qs_customize_header_title">Uređivanje i sortiranje</string>
   <string name="qs_customize_title">Uredi</string>
+  <string name="qs_flip_content_description_add_operation">Dodaj</string>
+  <string name="qs_flip_content_description_remove_operation">Ukloni</string>
+  <string name="qs_flip_customize_header_sub_title">Povucite dodane prečace da biste ih prerasporedili</string>
+  <string name="qs_flip_item_tile_added">Dodani prečaci</string>
+  <string name="qs_flip_item_tile_not_added">Dostupni prečaci</string>
+  <string name="qs_flip_tile_airplane">Zrakoplovni način</string>
+  <string name="qs_flip_tile_autobrightness">Automatska svjetlina</string>
+  <string name="qs_flip_tile_batterysaver">Štednja baterije</string>
+  <string name="qs_flip_tile_bt">Bluetooth</string>
+  <string name="qs_flip_tile_flashlight">Svjetiljka</string>
+  <string name="qs_flip_tile_gps">Lokacija</string>
+  <string name="qs_flip_tile_hotspot">Hotspot</string>
+  <string name="qs_flip_tile_mute">Tiho</string>
+  <string name="qs_flip_tile_nfc">NFC</string>
+  <string name="qs_flip_tile_night">Tamni način</string>
+  <string name="qs_flip_tile_papermode">Način čitanja</string>
+  <string name="qs_flip_tile_quietmode">DND</string>
+  <string name="qs_flip_tile_rotation">Rotacija zaklj.</string>
+  <string name="qs_flip_tile_screenlock">Zaključani zaslon</string>
+  <string name="qs_flip_tile_screenrecorder">Snimi zaslon</string>
+  <string name="qs_flip_tile_screenshot">Snimka zaslona</string>
+  <string name="qs_flip_tile_setting_label">Kontrolni centar vanjskog zaslona</string>
+  <string name="qs_flip_tile_vibrate">Vibracija</string>
+  <string name="qs_flip_tiles_stock">bt,zrakoplov,mute,flashlight,batterysaver,rotation,screenlock,screenshot,custom(com.miui.screenrecorder/.service.QuickService),gps,autobrightness,papermode,quietmode,vibrate,nfc,hotspot,night</string>
+  <string name="qs_flip_tiles_stock_global">bt,zrakoplov,mute,flashlight,batterysaver,rotation,screenlock,screenshot,custom(com.miui.screenrecorder/.service.QuickService),gps,autobrightness,papermode,quietmode,vibrate,nfc,hotspot,night</string>
   <string name="qs_open_night_mode_alert_summary">"Određene postavke zaslona nisu kompatibilne s Tamnim načinom. Međutim, one će se vratiti kada isključite Tamni način."</string>
   <string name="quick_controls_subtitle">Dodavanje kontrola za povezane uređaje</string>
   <string name="quick_controls_title">Kontrole uređaja</string>
