--- a/Croatian/main/NotificationCenter.apk/res/values-hr/strings.xml
+++ b/Croatian/main/NotificationCenter.apk/res/values-hr/strings.xml
@@ -28,6 +28,10 @@
   <string name="abc_shareactionprovider_share_with">Dijeljenje sa</string>
   <string name="abc_shareactionprovider_share_with_application">Dijeljenje sa: %s</string>
   <string name="abc_toolbar_collapse_description">Sažmi</string>
+  <string name="accessibility_sliding_button_state_description_off">Isključeno</string>
+  <string name="accessibility_sliding_button_state_description_on">Uključeno</string>
+  <string name="accessibility_tab_state_description_unselect">Nije odabrano</string>
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
   <string name="actionbar_button_up_description">Natrag</string>
   <string name="aggregate_title">Pravila za grupiranje obavijesti</string>
   <string name="ai_dialog_negative_button_text">"Ne dopusti"</string>
@@ -44,6 +48,9 @@
 Xiaomi će obraditi sadržaj obavijesti i poruka (uključujući sve privatne podatke u njima), ali nećemo pohraniti te podatke."</string>
   <string name="ai_notification_summary">Sažetak AI obavijesti pruža pametne sažetke ključnih informacija iz obavijesti. Ova značajka malo će povećati potrošnju energije.</string>
   <string name="ai_notification_title">Sažetak AI obavijesti</string>
+  <string name="ai_public_link"><Data>Registarski broj: &lt;a href=https://www.cac.gov.cn/2024-04/02/c_1713729983803145.htm>Beijing-XiaoMiDuanCeWenBen-202412100047&lt;/a></Data></string>
+  <string name="ai_public_name">Naziv modela: Xiaomi tekst na uređaju</string>
+  <string name="ai_public_title">Javno obavještenje</string>
   <string name="aon_message">Kako bi se utvrdilo gleda li više osoba u zaslon, ova će značajka pristupiti prednjoj kameri kada se prikaže plutajuća obavijest. Prikupljene slike koriste se samo za analizu na uređaju broja ljudi koji gledaju u ekran. Kada se otkrije više osoba, sadržaj obavijesti bit će skriven prema zadanim postavkama.</string>
   <string name="aon_on_cancel">Odustani</string>
   <string name="aon_on_confirm_time_out">U redu</string>
@@ -129,7 +136,11 @@ Xiaomi će obraditi sadržaj obavijesti i poruka (uključujući sve privatne pod
   <string name="miui_snooze_default_time">Na %d min.</string>
   <string name="miui_snooze_until_unlock_screen">Dok je zaključan</string>
   <string name="miuix_access_state_desc">Odabrano</string>
+  <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Završi način rada za uređivanje</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova poruka</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Pokreni način rada za uređivanje</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -145,8 +156,10 @@ Xiaomi će obraditi sadržaj obavijesti i poruka (uključujući sve privatne pod
   <string name="miuix_appcompat_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_select_all_description">Odaberi sve</string>
   <string name="miuix_appcompat_select_item">Odaberi stavke</string>
+  <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
   <string name="miuix_indexer_collect">Zbirke</string>
   <string name="miuix_indexer_selected">Odabrano %s</string>
+  <string name="miuix_progressbar_loading">Učitavanje</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshing">Osvježavanje</string>
@@ -155,6 +168,7 @@ Xiaomi će obraditi sadržaj obavijesti i poruka (uključujući sve privatne pod
   <string name="miuix_sbl_tracking_progress_labe_up_none">"To je sve za sada"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
+  <string name="miuix_show_password">Prikaži zaporku</string>
   <string name="monday">Ponedjeljak</string>
   <string name="monday_short">Pon</string>
   <string name="monday_shortest">P</string>
@@ -199,7 +213,6 @@ Xiaomi će obraditi sadržaj obavijesti i poruka (uključujući sve privatne pod
   <string name="month_september_short">Ruj</string>
   <string name="month_september_shortest">R</string>
   <string name="more">Više</string>
-  <string name="morning">Jutro</string>
   <string name="mtrl_badge_numberless_content_description">Nova obavijest</string>
   <string name="mtrl_chip_close_icon_content_description">Ukloni %1$s</string>
   <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
@@ -298,7 +311,8 @@ Xiaomi će obraditi sadržaj obavijesti i poruka (uključujući sve privatne pod
   <string name="sunday">Nedjelja</string>
   <string name="sunday_short">Ned</string>
   <string name="sunday_shortest">N</string>
-  <string name="swipe_to_delete">Povuci lijevo ili desno za brisanje</string>
+  <string name="text_input_layout_default_error">Ovo je zadana pogreška</string>
+  <string name="swipe_to_delete">Povucite ulijevo ili udesno za brisanje</string>
   <string name="thursday">Četvrtak</string>
   <string name="thursday_short">Čet</string>
   <string name="thursday_shortest">Č</string>
